Add api get List for equipment
