# apps/back-end/src/routes/equipment.routes.ts
@@ -3,18 +3,21 @@ import {
   createEquipmentController,
   updateEquipmentController,
   deleteEquipmentController,
-  getEquipmentDetailController
+  getEquipmentDetailController,
+  getListEquipmentController
 } from '~/controllers/equipment.controller'
 import {
   createEquipmentValidator,
   updateEquipmentValidator,
   deleteEquipmentValidator,
-  getEquipmentDetailValidator
+  getEquipmentDetailValidator,
+  getListEquipmentValidator
 } from '~/middlewares/equipment.middleware'
 import { wrapRequestHandler } from '~/utils/handlers'
 
 const equipmentRouter = Router()
 
+equipmentRouter.get('/', getListEquipmentValidator, wrapRequestHandler(getListEquipmentController))
 equipmentRouter.post('/create', createEquipmentValidator, wrapRequestHandler(createEquipmentController))
 equipmentRouter.put('/:id', updateEquipmentValidator, wrapRequestHandler(updateEquipmentController))
 equipmentRouter.delete('/:id', deleteEquipmentValidator, wrapRequestHandler(deleteEquipmentController))
